# travel-agency-crm

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/epic_trips_crm/app/: main.py  window.py
src/epic_trips_crm/app/services/: db_service.py
src/epic_trips_crm/app/tabs/: checklists_tab.py  clients_tab.py  sales_tab.py  trips_tab.py
src/epic_trips_crm/app/widgets/: config_status.py  log_panel.py
src/epic_trips_crm/config/: paths.py  settings.py
src/epic_trips_crm/db/: engine.py  enums.py  models.py
src/epic_trips_crm/db/repositories/: base.py  checklist.py  clients.py  commissions.py  sales.py  trips.py
src/epic_trips_crm/scraping/: run_submit_sale.py  travelagentportal_playwright.py
src/epic_trips_crm/services/: portal_client.py  sales_submission.py  trip_status.py
src/epic_trips_crm/testing/: fakes.py
src/epic_trips_crm/utils/: errors.py
tests/integration/: test_db_connectivity.py  test_repos_happy_path.py  test_sales_submission_service.py  test_trip_status_service.py
tests/unit/: conftest.py  test_checklist_repo_import.py  test_commission_repo_import.py  test_config_paths.py  test_models_import.py  test_portal_final_submit_gate.py  test_provider_validation.py  test_repositories_crud_lite.py  test_sale_status_validation.py  test_settings_requirements.py  test_trip_status_validation.py  test_trips_portal_form_ref.py  test_ui_config_status.py  test_ui_imports.py  test_ui_window_instantiation.py
